--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -812,5 +812,6 @@
     "The group was deleted.": "The group was deleted.",
     "Type to search task": "Type to search task",
     "The following items should be configured to ensure your process is functional.": "The following items should be configured to ensure your process is functional.",
-    "The bpm definition is not valid": "The bpm definition is not valid"
+    "The bpm definition is not valid": "The bpm definition is not valid",
+    "Job Title": "Job Title"
 }
