--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -73,9 +73,9 @@
     "Edit Comments": "Edit Comments",
     "Delete Comments": "Delete Comments",
     "Auth-Clients": "Auth-Clients",
-    "View Auth-Clients": "View Auth-Clients",
-    "Create Auth-Clients": "Create Auth-Clients",
-    "Edit Auth-Clients": "Edit Auth-Clients",
+    "View Auth Clients": "View Auth-Clients",
+    "Create AuthClients": "Create Auth-Clients",
+    "Edit Auth Clients": "Edit Auth-Clients",
     "Delete Auth-Clients": "Delete Auth-Clients",
     "Files (API)": "Files (API)",
     "View Files": "View Files",
@@ -594,8 +594,9 @@
     "Auto validate": "Auto validate",
     "Problems": "Problems",
     "Identifier": "Identifier",
-    "The id field should be unique across all elements in the diagram": "The id field should be unique across all elements in the diagram",
     "The Name of the Process": "The Name of the Process",
+    "The id field should be unique across all elements in the diagram": "The id field should be unique across all elements in the diagram",
+    "The id field should be unique across all elements in the diagram, ex. id_1." : "The id field should be unique across all elements in the diagram, ex. id_1.",
     "The Name of the Sequence Flow": "The Name of the Sequence Flow",
     "Expression": "Expression",
     "Enter the expression that describes the workflow condition": "Enter the expression that describes the workflow condition",
