Labels in multiselect

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -814,5 +814,6 @@
     "Type to search task": "Type to search task",
     "The following items should be configured to ensure your process is functional.": "The following items should be configured to ensure your process is functional.",
     "The bpm definition is not valid": "The bpm definition is not valid",
-    "Job Title": "Job Title"
+    "Job Title": "Job Title",
+    "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query."
 }
