--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -595,7 +595,6 @@
     "Problems": "Problems",
     "Identifier": "Identifier",
     "The Name of the Process": "The Name of the Process",
-    "The id field should be unique across all elements in the diagram": "The id field should be unique across all elements in the diagram",
     "The id field should be unique across all elements in the diagram, ex. id_1." : "The id field should be unique across all elements in the diagram, ex. id_1.",
     "The Name of the Sequence Flow": "The Name of the Sequence Flow",
     "Expression": "Expression",
@@ -815,5 +814,6 @@
     "The following items should be configured to ensure your process is functional.": "The following items should be configured to ensure your process is functional.",
     "The bpm definition is not valid": "The bpm definition is not valid",
     "Job Title": "Job Title",
-    "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query."
+    "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query.",
+    "Json Options": "Json Options"
 }
