Add configuration Validator.js

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -815,5 +815,6 @@
     "The bpm definition is not valid": "The bpm definition is not valid",
     "Job Title": "Job Title",
     "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query.",
-    "Json Options": "Json Options"
+    "Json Options": "Json Options",
+    "Please click On to select a date.": "Please click On to select a date."
 }
