Update file-upload component

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -392,8 +392,8 @@
     "Computed Properties": "Computed Properties",
     "Preview": "Preview",
     "Editor": "Editor",
-    "Drop files here to upload or": "Drop files here to upload or",
-    "select files": "select files",
+    "Drop a file here to upload or": "Drop a file here to upload or",
+    "select file": "select file",
     "Background color": "Background color",
     "Controls": "Controls",
     "Text Box": "Text Box",
