Renaming spark->processmaker

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,6 +1,6 @@
 {
     "Are you sure you want to delete {{item}}?": "Are you sure you want to delete {{item}}?",
-    "About ProcessMaker Spark": "About ProcessMaker Spark",
+    "About ProcessMaker Processmaker": "About ProcessMaker Processmaker",
     "ProcessMaker v4.0 Beta 4": "ProcessMaker v4.0 Beta 4",
     "Report an issue": "Report an issue",
     "Get Help": "Get Help",
@@ -219,7 +219,7 @@
     "Assigned": "Assigned",
     "Request": "Request",
     "Request Received!": "Request Received!",
-    "ProcessMaker Spark is busy processing your request.": "ProcessMaker Spark is busy processing your request.",
+    "ProcessMaker Processmaker is busy processing your request.": "ProcessMaker Processmaker is busy processing your request.",
     "You can close this page.": "You can close this page.",
     "Processes": "Processes",
     "Profile": "Profile",
@@ -713,7 +713,7 @@
     "Canceled": "Canceled",
     "Task Completed Successfully": "Task Completed Successfully",
     "After importing, you can reassign users and groups to your Process.": "After importing, you can reassign users and groups to your Process.",
-    "ProcessMaker Spark does not import Environment Variables or Enterprise Packages. You must manually configure these features.": "ProcessMaker Spark does not import Environment Variables or Enterprise Packages. You must manually configure these features.",
+    "ProcessMaker Processmaker does not import Environment Variables or Enterprise Packages. You must manually configure these features.": "ProcessMaker Processmaker does not import Environment Variables or Enterprise Packages. You must manually configure these features.",
     "Unable to import": "Unable to import",
     "Started import of": "Started import of",
     "Incomplete import of": "Incomplete import of",
