Change copy script title

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -795,7 +795,7 @@
     "Dismiss Alert": "Dismiss Alert",
     "Sample Input": "Sample Input",
     "Output": "Output",
-    "Duplicate Script": "Duplicate Script",
+    "Copy Script": "Copy Script",
     "Select a user to set the API access of the Script": "Select a user to set the API access of the Script",
     "Successfully imported": "Successfully imported",
     "Display": "Display",
