--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -845,5 +845,7 @@
     "Start event must be blank": "Start event must be blank",
     "user": "user",
     "group": "group",
-    "Modeler": "Modeler"
+    "Modeler": "Modeler",
+    "No Data Found": "No Data Found",
+    "Sorry, this request doesn't contain any information." : "Sorry, this request doesn't contain any information."
 }
