--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -831,6 +831,5 @@
     "Your PMQL contains invalid syntax.": "Your PMQL contains invalid syntax.",
     "Your PMQL search could not be completed.": "Your PMQL search could not be completed.",
     "Your profile was saved.": "Your profile was saved.",
-  	"Are you sure you want to delete {{item}}?": "Are you sure you want to delete {{item}}?",
-
+  	"Are you sure you want to delete {{item}}?": "Are you sure you want to delete {{item}}?"
 }
