--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -184,7 +184,7 @@
     "Data Type": "Data Type",
     "Data": "Data",
     "Database connection failed. Check your database configuration and try again.": "Database connection failed. Check your database configuration and try again.",
-    "Date format": "Date format",
+    "Date Format": "Date Format",
     "Date Picker": "Date Picker",
     "Date": "Date",
     "Date/Time": "Date/Time",
@@ -486,7 +486,7 @@
     "Please visit the Processes page": "Please visit the Processes page",
     "Please wait while your content is loaded": "Please wait while your content is loaded",
     "Pool": "Pool",
-    "Postal code": "Postal code",
+    "Postal Code": "Postal Code",
     "Preview Screen was Submitted": "Preview Screen was Submitted",
     "Preview": "Preview",
     "Previous Task Assignee": "Previous Task Assignee",
@@ -740,7 +740,7 @@
     "This screen will be populated once the Request is completed.": "This screen will be populated once the Request is completed.",
     "Time expression": "Time expression",
     "Time when the task will due (hours)": "Time when the task will due (hours)",
-    "Time zone": "Time zone",
+    "Time Zone": "Time Zone",
     "Time": "Time",
     "Timeout": "Timeout",
     "Timing Control": "Timing Control",
