Capitalize the words "environment variables" since this is considered a proper noun.

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -768,8 +768,8 @@
     "Upload Name": "Upload Name",
     "Upload XML": "Upload XML",
     "Use this in your custom css rules": "Use this in your custom css rules",
-    "User assignments and sensitive environment variables will not be exported.": "User assignments and sensitive environment variables will not be exported.",
-    "User assignments and sensitive environment variables will not be imported.": "User assignments and sensitive environment variables will not be imported.",
+    "User assignments and sensitive Environment Variables will not be exported.": "User assignments and sensitive Environment Variables will not be exported.",
+    "User assignments and sensitive Environment Variables will not be imported.": "User assignments and sensitive Environment Variables will not be imported.",
     "User has no tokens.": "User has no tokens.",
     "User Permissions Updated Successfully": "User Permissions Updated Successfully",
     "User Updated Successfully ": "User Updated Successfully ",
