--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -838,5 +838,31 @@
     "Configuration": "Configuration",
     "Name": "Name",
     "Whitelist": "Whitelist",
-    "Event-Based Gateway": "Event-Based Gateway"
+    "Event-Based Gateway": "Event-Based Gateway",
+    "Edit": "Edit",
+    "User": "User",
+    "Change Styles": "Change Styles",
+    "Custom Logo (150x40 pixels)": "Custom Logo (150x40 pixels)",
+    "Custom Icon (40x40 pixels)": "Custom Icon (40x40 pixels)",
+    "Choose logo image": "Choose logo image",
+    "Choose icon image": "Choose icon image",
+    "Custom Colors": "Custom Colors",
+    "Click on the color value to use the color picker.": "Click on the color value to use the color picker.",
+    "Primary": "Primary",
+    "Secondary": "Secondary",
+    "Info": "Info",
+    "Warning": "Warning",
+    "Danger": "Danger",
+    "Light": "Light",
+    "Sans Serif Font": "Sans Serif Font",
+    "Serif Font": "Serif Font",
+    "Requester": "Requester",
+    "Participants": "Participants",
+    "Completed": "Completed",
+    "Due": "Due",
+    "Group": "Group",
+    "Form": "Form",
+    "Display": "Display",
+    "The styles were saved.": "The styles were saved.",
+    "The styles were updated.": "The styles were updated."
 }
