Update label from Chnage Styles to Customize UI

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -841,7 +841,7 @@
     "Event-Based Gateway": "Event-Based Gateway",
     "Edit": "Edit",
     "User": "User",
-    "Change Styles": "Change Styles",
+    "Customize UI": "Customize UI",
     "Custom Logo (150x40 pixels)": "Custom Logo (150x40 pixels)",
     "Custom Icon (40x40 pixels)": "Custom Icon (40x40 pixels)",
     "Choose logo image": "Choose logo image",
