Change label Sans Serif Font -> Font

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -854,8 +854,7 @@
     "Warning": "Warning",
     "Danger": "Danger",
     "Light": "Light",
-    "Sans Serif Font": "Sans Serif Font",
-    "Serif Font": "Serif Font",
+    "Font": "Font",
     "Requester": "Requester",
     "Participants": "Participants",
     "Completed": "Completed",
