Add page screen preview

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -865,5 +865,6 @@
     "The styles were recompiled.": "The styles were recompiled.",
     "Regenerating CSS Files": "Regenerating CSS Files",
     "Please wait while the files are generated. The screen will be updated when finished.": "Please wait while the files are generated. The screen will be updated when finished.",
-    "We recommended a transparent PNG at :size pixels.": "We recommended a transparent PNG at :size pixels."
+    "We recommended a transparent PNG at :size pixels.": "We recommended a transparent PNG at :size pixels.",
+    "Print": "Print"
 }
