Fix translation for 'Event-Based Gateway' Modeler

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -610,7 +610,7 @@
   "Call Activity" : "Anrufaktivität",
   "End Event" : "Endereignis",
   "The Name of the End Event" : "Name des Endereignisses",
-  "Event-based Gateway" : "Ereignis-basiertes Gateway",
+  "Event-Based Gateway" : "Ereignis-basiertes Gateway",
   "The Name of the Gateway" : "Der Name des Gateways",
   "Exclusive Gateway" : "Exklusives Gateway",
   "Gateway" : "Gateway",
