--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -610,7 +610,7 @@
   "Call Activity" : "Actividad de llamadas",
   "End Event" : "Evento de finalización",
   "The Name of the End Event" : "El nombre del Evento de finalización",
-  "Event-based Gateway" : "Puerta de enlace basada en eventos",
+  "Event-Based Gateway" : "Puerta de enlace basada en eventos",
   "The Name of the Gateway" : "El nombre de la puerta de enlace",
   "Exclusive Gateway" : "Puerta de enlace exclusiva",
   "Gateway" : "Puerta de enlace",
