--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -610,7 +610,7 @@
   "Call Activity" : "Activité d'appel",
   "End Event" : "Événement de fin",
   "The Name of the End Event" : "Non de l'événement de fin",
-  "Event-based Gateway" : "Branchement basé sur des événements",
+  "Event-Based Gateway" : "Branchement basé sur des événements",
   "The Name of the Gateway" : "Nom du branchement",
   "Exclusive Gateway" : "Branchement exclusif",
   "Gateway" : "Branchement",
