--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -279,7 +279,7 @@
     "Error": "Error",
     "Errors": "Errors",
     "Event has multiple event definitions": "Event has multiple event definitions",
-    "Event-based Gateway": "Event-based Gateway",
+    "Event-Based Gateway": "Event-based Gateway",
     "Exclusive Gateway": "Exclusive Gateway",
     "Expires At": "Expires At",
     "Export Process": "Export Process",
