Update copy to match spec

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -379,7 +379,7 @@
     "Leave the password blank to keep the current password:": "Leave the password blank to keep the current password:",
     "Left": "Left",
     "light": "light",
-    "Line Input": "Line Inputs",
+    "Line Input": "Line Input",
     "Link": "Link",
     "List Label": "List Label",
     "List Name": "List Name",
