Translations and blade template updates

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -375,8 +375,8 @@
   "Variable" : "Variable",
   "Variables" : "Variablen",
   "Duplicate Screen" : "Ansicht duplizieren",
-  "Run script as" : "Skript ausführen als",
-  "How many seconds the script should be allowed to run (0 is unlimited)." : "Wie viele Sekunden soll das Skript ausgeführt werden dürfen (0 ist unbegrenzt).",
+  "Run Script As" : "Skript ausführen als",
+  "Enter how many seconds the Script runs before timing out (0 is unlimited)." : "Wie viele Sekunden soll das Skript ausgeführt werden dürfen (0 ist unbegrenzt).",
   "Timeout" : "Zeitüberschreitung",
   "No relevant data" : "Keine relevanten Daten",
   "Your profile was saved." : "Ihr Profil wurde gespeichert.",
