--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -375,8 +375,8 @@
   "Variable" : "Variable",
   "Variables" : "Variables",
   "Duplicate Screen" : "Duplicar pantalla",
-  "Run script as" : "Ejecutar script como",
-  "How many seconds the script should be allowed to run (0 is unlimited)." : "Cuántos segundos se deben permitir que se ejecute el script (0 es ilimitado).",
+  "Run Script As" : "Ejecutar script como",
+  "Enter how many seconds the Script runs before timing out (0 is unlimited)." : "Cuántos segundos se deben permitir que se ejecute el script (0 es ilimitado).",
   "Timeout" : "Tiempo de espera",
   "No relevant data" : "No hay datos relevantes",
   "Your profile was saved." : "Su perfil ha sido guardado.",
