--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -375,8 +375,8 @@
   "Variable" : "Variable",
   "Variables" : "Variables",
   "Duplicate Screen" : "Dupliquer l'écran",
-  "Run script as" : "Exécuter le script en tant que",
-  "How many seconds the script should be allowed to run (0 is unlimited)." : "Pendant combien de secondes le script peut s'exécuter (0 = illimité).",
+  "Run Script As" : "Exécuter le script en tant que",
+  "Enter how many seconds the Script runs before timing out (0 is unlimited)." : "Pendant combien de secondes le script peut s'exécuter (0 = illimité).",
   "Timeout" : "Délai d'expiration",
   "No relevant data" : "Aucune donnée pertinente",
   "Your profile was saved." : "Votre profil a été enregistré.",
