--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -334,7 +334,7 @@
     "Hide Details": "Hide Details",
     "Horizontal alignment of the text": "Horizontal alignment of the text",
     "hour": "hour",
-    "How many seconds the script should be allowed to run (0 is unlimited).": "How many seconds the script should be allowed to run (0 is unlimited).",
+    "Enter how many seconds the Script runs before timing out (0 is unlimited).": "Enter how many seconds the Script runs before timing out (0 is unlimited).",
     "Id": "Id",
     "Identifier": "Identifier",
     "Image height": "Image height",
@@ -554,7 +554,7 @@
     "Right": "Right",
     "Rows": "Rows",
     "Rule": "Rule",
-    "Run script as": "Run script as",
+    "Run Script As": "Run Script As",
     "Run script": "Run script",
     "Run": "Run",
     "S": "S",
