Adding dark variable

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -857,6 +857,7 @@
     "Warning": "Warning",
     "Danger": "Danger",
     "Light": "Light",
+    "Dark": "Dark",
     "Font": "Font",
     "Requester": "Requester",
     "Participants": "Participants",
