Changed string "Request All" to "All Requests"

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -534,7 +534,7 @@
     "Repeat every": "Repeat every",
     "Repeat on": "Repeat on",
     "Report an issue": "Report an issue",
-    "Request All": "Request All",
+    "All Requests": "All Requests",
     "Request Canceled": "Request Canceled",
     "Request Completed": "Request Completed",
     "Request Detail": "Request Detail",
