--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -225,7 +225,7 @@
   "Profile" : "Profil",
   "About" : "À propos",
   "Log Out" : "Fermer la session",
-  "Request All" : "Toutes les demandes",
+  "All Requests" : "Toutes les demandes",
   "Started By Me" : "Initiée par moi",
   "To Do" : "À faire",
   "Queue Management" : "Gestion de la file d'attente",
