--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -225,7 +225,7 @@
   "Profile" : "Profile",
   "About" : "Über",
   "Log Out" : "Abmelden",
-  "Request All" : "Alle Anfragen",
+  "All Requests" : "Alle Anfragen",
   "Started By Me" : "Von mir begonnen",
   "To Do" : "Zu erledigen",
   "Queue Management" : "Warteschlangenverwaltung",
