--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -225,7 +225,7 @@
   "Profile" : "Perfil",
   "About" : "Acerca de",
   "Log Out" : "Cerrar sesión",
-  "All Requests" : "Todas las solicitudes",
+  "Request All" : "Todas las solicitudes",
   "Started By Me" : "Iniciado por mí",
   "To Do" : "Por hacer",
   "Queue Management" : "Gestión de cola",
