Fixed the improper sentence structure seen when deleting API tokens. Updates will be needed for FR/DE/ES in "package-translate"

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -54,7 +54,7 @@
   "Archived Processes": "Archived Processes",
   "Are you ready to begin?": "Are you ready to begin?",
   "Are you sure to delete the group ": "Are you sure to delete the group ",
-  "Are you sure to delete the token ": "Are you sure to delete the token ",
+  "Are you sure you want to delete the token ": "Are you sure you want to delete the token ",
   "Are you sure you want cancel this request ?": "Are you sure you want cancel this request ?",
   "Are you sure you want to archive the process ": "Are you sure you want to archive the process ",
   "Are you sure you want to archive the process": "Are you sure you want to archive the process ",
