Add missing translations

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -88,7 +88,7 @@
   "Auto validate": "Auto validate",
   "Avatar": "Avatar",
   "Back to Login": "Back to Login",
-  "Background color": "Background color",
+  "Background Color": "Background Color",
   "Basic Search": "Basic Search",
   "Basic": "Basic",
   "Body of the text annotation": "Body of the text annotation",
@@ -498,7 +498,7 @@
   "Permissions": "Permissions",
   "Phone": "Phone",
   "Placeholder": "Placeholder",
-  "Please click On to select a date.": "Please click On to select a date.",
+  "Please click On to select a date": "Please click On to select a date",
   "Please contact your administrator to get started.": "Please contact your administrator to get started.",
   "Please log in to continue your work on this page.": "Please log in to continue your work on this page.",
   "Please visit the Processes page": "Please visit the Processes page",
@@ -658,7 +658,7 @@
   "Tasks": "Tasks",
   "Text Annotation": "Text Annotation",
   "Text Box": "Text Box",
-  "Text color": "Text color",
+  "Text Color": "Text Color",
   "Text Content": "Text Content",
   "Text Horizontal Alignment": "Text Horizontal Alignment",
   "Text Label": "Text Label",
@@ -771,7 +771,7 @@
   "To Do Tasks": "To Do Tasks",
   "To Do": "To Do",
   "to": "to",
-  "Toggle Style?": "Toggle Style?",
+  "Toggle Style": "Toggle Style",
   "Too many login attempts. Please try again in :seconds seconds.": "Too many login attempts. Please try again in :seconds seconds.",
   "Top": "Top",
   "type here to search": "type here to search",
@@ -855,5 +855,54 @@
   "Your password has been reset!": "Your password has been reset!",
   "Your PMQL contains invalid syntax.": "Your PMQL contains invalid syntax.",
   "Your PMQL search could not be completed.": "Your PMQL search could not be completed.",
-  "Your profile was saved.": "Your profile was saved."
+  "Your profile was saved.": "Your profile was saved.",
+  "Requester": "Requester",
+  "Participants" : "Participants",
+  "Completed" : "Completed",
+  "Due": "Due",
+  "Edit": "Edit",
+  "Processes": "Processes",
+  "User": "User",
+  "Group": "Group",
+  "Configuration": "Configuration",
+  "ASSIGNED": "ASSIGNED",
+  "DUE": "DUE",
+  "TASK": "TASK",
+  "Form": "Form",
+  "Display": "Display",
+  "Delete Control": "Delete Control",
+  "Radio Button Group": "Radio Button Group",
+  "Multicolumn / Table": "Multicolumn / Table",
+  "Label": "Label",
+  "Button Variant Style": "Button Variant Style",
+  "Primary": "Primary",
+  "Secondary": "Secondary",
+  "Info": "Info",
+  "Warning": "Warning",
+  "Danger": "Danger",
+  "Light": "Light",
+  "Dark": "Dark",
+  "Success": "Success",
+  "Helper Text": "Helper Text",
+  "Placeholder Text": "Placeholder Text",
+  "Read Only": "Read Only",
+  "Validation Rules": "Validation Rules",
+  "Data Source": "Data Source",
+  "Source Type": "Source Type",
+  "Close": "Close",
+  "Yes": "Yes",
+  "Edit Option": "Edit Option",
+  "Options": "Options",
+  "Edit as JSON": "Edit as JSON",
+  "Render Options As": "Render Options As",
+  "Checked by default": "Checked by default",
+  "Destination Screen": "Destination Screen",
+  "Button Label": "Button Label",
+  "Image name": "Image name",
+  "Upload": "Upload",
+  "The label describes the field's name": "The label describes the field's name",
+  "Duration": "Duration",
+  "Cycle": "Cycle",
+  "New Boundary Timer Event": "New Boundary Timer Event",
+  "Recurring loop will repeat at time interval set below": "Recurring loop will repeat at time interval set below"
 }
