--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -666,6 +666,7 @@
   "Text": "Text",
   "Textarea": "Textarea",
   "Th": "T",
+  "The Auth-Client must have at least :min item chosen.": "The Auth-Client must have at least :min item chosen.",
   "The auth client was ": "The auth client was ",
   "The bpm definition is not valid": "The bpm definition is not valid",
   "The category field is required.": "The category field is required.",
