There were 20 duplicate lines.

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -98,6 +98,8 @@
   "Bottom": "Bottom",
   "BPMN": "BPMN",
   "Browse": "Browse",
+  "Button Label": "Button Label",
+  "Button Variant Style": "Button Variant Style",
   "Calcs": "Calcs",
   "Calculated Properties": "Calculated Properties",
   "Call Activity": "Call Activity",
@@ -113,6 +115,7 @@
   "Cell": "Cell",
   "Center": "Center",
   "Checkbox": "Checkbox",
+  "Checked by default": "Checked by default",
   "Choose icon image": "Choose icon image",
   "Choose logo image": "Choose logo image",
   "City": "City",
@@ -121,7 +124,7 @@
   "Click the browse button below to get started": "Click the browse button below to get started",
   "Client ID": "Client ID",
   "Client Secret": "Client Secret",
-  "CLOSE": "CLOSE",
+  "Close": "Close",
   "Collection Select": "Collection Select",
   "Collections": "Collections",
   "Colspan": "Colspan",
@@ -130,6 +133,7 @@
   "Column": "Column",
   "Comments": "Comments",
   "Completed Tasks": "Completed Tasks",
+  "Completed" : "Completed",
   "completed": "completed",
   "Computed Properties": "Computed Properties",
   "Configuration JSON for the script task": "Configuration JSON for the script task",
@@ -186,11 +190,13 @@
   "Custom Icon": "Custom Icon",
   "Custom Logo": "Custom Logo",
   "Customize UI": "Customize UI",
+  "Cycle": "Cycle",
   "danger": "danger",
   "dark": "dark",
   "Data Input": "Data Input",
   "Data Name": "Data Name",
   "Data Preview": "Data Preview",
+  "Data Source": "Data Source",
   "Data Type": "Data Type",
   "Data": "Data",
   "Database connection failed. Check your database configuration and try again.": "Database connection failed. Check your database configuration and try again.",
@@ -207,6 +213,7 @@
   "Delete Auth-Clients": "Delete Auth-Clients",
   "Delete Categories": "Delete Categories",
   "Delete Comments": "Delete Comments",
+  "Delete Control": "Delete Control",
   "Delete Environment Variables": "Delete Environment Variables",
   "Delete Files": "Delete Files",
   "Delete Groups": "Delete Groups",
@@ -220,6 +227,7 @@
   "Delete": "Delete",
   "Description": "Description",
   "Design": "Design",
+  "Destination Screen": "Destination Screen",
   "Destination": "Destination",
   "Details": "Details",
   "Direction": "Direction",
@@ -236,6 +244,8 @@
   "Due In": "Due In",
   "due": "due",
   "Duplicate": "Duplicate",
+  "Duration": "Duration",
+  "Edit as JSON": "Edit as JSON",
   "Edit Auth Clients": "Edit Auth-Clients",
   "Edit Categories": "Edit Categories",
   "Edit Comments": "Edit Comments",
@@ -246,6 +256,7 @@
   "Edit Group": "Edit Group",
   "Edit Groups": "Edit Groups",
   "Edit Notifications": "Edit Notifications",
+  "Edit Option": "Edit Option",
   "Edit Page Title": "Edit Page Title",
   "Edit Page": "Edit Page",
   "Edit Process Category": "Edit Process Category",
@@ -343,6 +354,7 @@
   "Help text is meant to provide additional guidance on the field's value": "Help text is meant to provide additional guidance on the field's value",
   "Help Text": "Help Text",
   "Help": "Help",
+  "Helper Text": "Helper Text",
   "Hide Details": "Hide Details",
   "Horizontal alignment of the text": "Horizontal alignment of the text",
   "hour": "hour",
@@ -350,6 +362,7 @@
   "Identifier": "Identifier",
   "Image height": "Image height",
   "Image id": "Image id",
+  "Image name": "Image name",
   "image width": "image width",
   "Image": "Image",
   "Import Process": "Import Process",
@@ -381,6 +394,7 @@
   "Justify": "Justify",
   "Key Name": "Key Name",
   "Key": "Key",
+  "Label": "Label",
   "Lane Above": "Lane Above",
   "Lane Below": "Lane Below",
   "Lane": "Lane",
@@ -419,11 +433,13 @@
   "Modified": "Modified",
   "month": "month",
   "Multi Column": "Multi Column",
+  "Multicolumn / Table": "Multicolumn / Table",
   "My Requests": "My Requests",
   "Name must be distinct": "Name must be distinct",
   "name": "name",
   "Navigation": "Navigation",
   "Never": "Never",
+  "New Boundary Timer Event": "New Boundary Timer Event",
   "New Call Activity": "New Call Activity",
   "New Checkbox": "New Checkbox",
   "New Collection Select": "New Collection Select",
@@ -479,6 +495,7 @@
   "Open Request": "Open Request",
   "Open Task": "Open Task",
   "Options List": "Options List",
+  "Options": "Options",
   "organization": "organization",
   "Output": "Output",
   "Owner": "Owner",
@@ -487,6 +504,7 @@
   "Page Navigation": "Page Navigation",
   "Page not found - ProcessMaker": "Page not found - ProcessMaker",
   "Parallel Gateway": "Parallel Gateway",
+  "Participants" : "Participants",
   "participants": "participants",
   "Password Grant Client ID": "Password Grant Client ID",
   "Password Grant Secret": "Password Grant Secret",
@@ -497,6 +515,7 @@
   "Permission To Start": "Permission To Start",
   "Permissions": "Permissions",
   "Phone": "Phone",
+  "Placeholder Text": "Placeholder Text",
   "Placeholder": "Placeholder",
   "Please click On to select a date": "Please click On to select a date",
   "Please contact your administrator to get started.": "Please contact your administrator to get started.",
@@ -536,11 +555,14 @@
   "Property Name": "Property Name",
   "Property Saved": "Property Saved",
   "Queue Management": "Queue Management",
+  "Radio Button Group": "Radio Button Group",
   "Radio Group": "Radio Group",
+  "Read Only": "Read Only",
   "Reassign to": "Reassign to",
   "Reassign": "Reassign",
   "Record Form": "Record Form",
   "Record List": "Record List",
+  "Recurring loop will repeat at time interval set below": "Recurring loop will repeat at time interval set below",
   "Redirect URL": "Redirect URL",
   "Redirect": "Redirect",
   "Redo": "Redo",
@@ -550,6 +572,7 @@
   "Remove from Group": "Remove from Group",
   "Remove the .env file to perform a new installation.": "Remove the .env file to perform a new installation.",
   "Remove": "Remove",
+  "Render Options As": "Render Options As",
   "Repeat every": "Repeat every",
   "Repeat on": "Repeat on",
   "Report an issue": "Report an issue",
@@ -622,6 +645,7 @@
   "Something went wrong. Try refreshing the application": "Something went wrong. Try refreshing the application",
   "Sorry, this request doesn't contain any information.": "Sorry, this request doesn't contain any information.",
   "Sorry! API failed to load": "Sorry! API failed to load",
+  "Source Type": "Source Type",
   "Spanish": "Spanish",
   "Start date": "Start date",
   "Start event is missing event definition": "Start event is missing event definition",
@@ -690,6 +714,7 @@
   "The id field should be unique across all elements in the diagram, ex. id_1.": "The id field should be unique across all elements in the diagram, ex. id_1.",
   "The id field should be unique across all elements in the diagram": "The id field should be unique across all elements in the diagram",
   "The label describes the button's text": "The label describes the button's text",
+  "The label describes the field's name": "The label describes the field's name",
   "The label describes the fields name": "The label describes the fields name",
   "The label describes this record list": "The label describes this record list",
   "The name of the button": "The name of the button",
@@ -791,6 +816,7 @@
   "Upload image": "Upload image",
   "Upload Name": "Upload Name",
   "Upload XML": "Upload XML",
+  "Upload": "Upload",
   "Use a transparent PNG at :size pixels for best results.": "Use a transparent PNG at :size pixels for best results.",
   "Use this in your custom css rules": "Use this in your custom css rules",
   "User assignments and sensitive Environment Variables will not be exported.": "User assignments and sensitive Environment Variables will not be exported.",
@@ -805,6 +831,7 @@
   "Users": "Users",
   "Valid JSON Data Object": "Valid JSON Data Object",
   "Validation rules ensure the integrity and validity of the data.": "Validation rules ensure the integrity and validity of the data.",
+  "Validation Rules": "Validation Rules",
   "Validation": "Validation",
   "Value": "Value",
   "Variable Name": "Variable Name",
@@ -841,6 +868,7 @@
   "whitelist": "whitelist",
   "Width": "Width",
   "year": "year",
+  "Yes": "Yes",
   "You are about to export a Process.": "You are about to export a Process.",
   "You are about to export a Screen.": "You are about to export a Screen.",
   "You are about to import a Process.": "You are about to import a Process.",
@@ -855,54 +883,6 @@
   "Your password has been reset!": "Your password has been reset!",
   "Your PMQL contains invalid syntax.": "Your PMQL contains invalid syntax.",
   "Your PMQL search could not be completed.": "Your PMQL search could not be completed.",
-  "Your profile was saved.": "Your profile was saved.",
-  "Requester": "Requester",
-  "Participants" : "Participants",
-  "Completed" : "Completed",
-  "Due": "Due",
-  "Edit": "Edit",
-  "Processes": "Processes",
-  "User": "User",
-  "Group": "Group",
-  "Configuration": "Configuration",
-  "ASSIGNED": "ASSIGNED",
-  "DUE": "DUE",
-  "TASK": "TASK",
-  "Form": "Form",
-  "Display": "Display",
-  "Delete Control": "Delete Control",
-  "Radio Button Group": "Radio Button Group",
-  "Multicolumn / Table": "Multicolumn / Table",
-  "Label": "Label",
-  "Button Variant Style": "Button Variant Style",
-  "Primary": "Primary",
-  "Secondary": "Secondary",
-  "Info": "Info",
-  "Warning": "Warning",
-  "Danger": "Danger",
-  "Light": "Light",
-  "Dark": "Dark",
-  "Success": "Success",
-  "Helper Text": "Helper Text",
-  "Placeholder Text": "Placeholder Text",
-  "Read Only": "Read Only",
-  "Validation Rules": "Validation Rules",
-  "Data Source": "Data Source",
-  "Source Type": "Source Type",
-  "Close": "Close",
-  "Yes": "Yes",
-  "Edit Option": "Edit Option",
-  "Options": "Options",
-  "Edit as JSON": "Edit as JSON",
-  "Render Options As": "Render Options As",
-  "Checked by default": "Checked by default",
-  "Destination Screen": "Destination Screen",
-  "Button Label": "Button Label",
-  "Image name": "Image name",
-  "Upload": "Upload",
-  "The label describes the field's name": "The label describes the field's name",
-  "Duration": "Duration",
-  "Cycle": "Cycle",
-  "New Boundary Timer Event": "New Boundary Timer Event",
-  "Recurring loop will repeat at time interval set below": "Recurring loop will repeat at time interval set below"
+  "Your profile was saved.": "Your profile was saved."
+
 }
